# iiti_soc_projects

./: .gitmodules  README.md
swift_pico/: CMakeLists.txt
swift_pico/launch/: swift_pico.launch.py  task_1c.launch.py
swift_pico/src/: pico_controller_PID.py  pico_server.py  waypoint_service.py
swift_pico/worlds/: arena.sdf  swift_pico.sdf
swift_pico_description/models/arena/: model.sdf
swift_pico_description/models/package_1/: model.sdf
swift_pico_description/models/package_1/meshes/: package.dae
swift_pico_description/models/package_2/: model.sdf
swift_pico_description/models/package_2/meshes/: package.dae
swift_pico_description/models/package_3/: model.sdf
swift_pico_description/models/package_3/meshes/: package.dae
